# ChangeLog for app-office/koffice-meta
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-office/cvs-repo/gentoo-x86/app-office/koffice-meta/Attic/ChangeLog,v 1.18 2005/10/10 22:07:20 greg_g Exp $

*koffice-meta-1.4.2 (10 Oct 2005)

  10 Oct 2005; Gregorio Guidi <greg_g@gentoo.org>
  +koffice-meta-1.4.2.ebuild:
  New version.

  11 Sep 2005; Aron Griffis <agriffis@gentoo.org> koffice-meta-1.4.1.ebuild:
  Mark 1.4.1 stable on alpha

  03 Sep 2005; Michael Hanselmann <hansmi@gentoo.org>
  koffice-meta-1.4.1.ebuild:
  Stable on ppc.

  31 Aug 2005; Marcus D. Hanwell <cryos@gentoo.org>
  koffice-meta-1.4.1.ebuild:
  Stable on amd64, closes bug 104377.

  27 Aug 2005; Gregorio Guidi <greg_g@gentoo.org> koffice-meta-1.4.1.ebuild:
  Stable on x86.

*koffice-meta-1.4.1 (25 Jul 2005)

  25 Jul 2005; Gregorio Guidi <greg_g@gentoo.org>
  +koffice-meta-1.4.1.ebuild:
  New version.

  12 Jul 2005; Joseph Jezak <josejx@gentoo.org> koffice-meta-1.3.5.ebuild:
  Marked ppc stable, thanks bambam.

  04 Jul 2005; Jason Wever <weeve@gentoo.org> koffice-meta-1.4.0.ebuild:
  Added ~sparc keyword.

  30 Jun 2005; Joseph Jezak <josejx@gentoo.org> koffice-meta-1.4.0.ebuild:
  Marked ~ppc for bug #95128.

  29 Jun 2005; Jose Luis Rivero <yoswink@gentoo.org>
  koffice-meta-1.4.0.ebuild:
  Added ~alpha wrt #95128

  22 Jun 2005; Markus Rothe <corsair@gentoo.org> koffice-meta-1.3.5.ebuild,
  koffice-meta-1.4.0.ebuild:
  Added ~ppc64

*koffice-meta-1.4.0 (21 Jun 2005)

  21 Jun 2005; Gregorio Guidi <greg_g@gentoo.org>
  +koffice-meta-1.4.0.ebuild:
  Final release of KOffice 1.4.

  05 Jun 2005; Marcus D. Hanwell <marcus@gentoo.org>
  koffice-meta-1.4.0_rc1.ebuild:
  Marked ~amd64, bug 95128.

*koffice-meta-1.4.0_rc1 (03 Jun 2005)

  03 Jun 2005; Gregorio Guidi <greg_g@gentoo.org>
  +koffice-meta-1.4.0_rc1.ebuild:
  Release candidate for new version of KOffice. Introduces two new
  applications: kexi and krita.
