@@ -1,6 +1,9 @@
 # ChangeLog for app-office/krita
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-office/cvs-repo/gentoo-x86/app-office/krita/Attic/ChangeLog,v 1.14 2005/10/10 22:08:42 greg_g Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-office/cvs-repo/gentoo-x86/app-office/krita/Attic/ChangeLog,v 1.15 2005/10/13 17:02:37 agriffis Exp $
+
+  13 Oct 2005; Aron Griffis <agriffis@gentoo.org> krita-1.4.2.ebuild:
+  Mark 1.4.2 ~ia64
 
 *krita-1.4.2 (10 Oct 2005)
 
